<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/information_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screen_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/device_metrics"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screen_width_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/screen_width"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="@+id/screen_information"
                app:layout_constraintTop_toBottomOf="@+id/screen_information" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screen_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@+id/status_bar_height"
                app:layout_constraintStart_toEndOf="@+id/screen_width_hint"
                app:layout_constraintTop_toTopOf="@+id/screen_width_hint"
                tools:text="1440 px" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screen_height_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/screen_height"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="@+id/screen_width_hint"
                app:layout_constraintTop_toBottomOf="@+id/screen_width" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screen_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@+id/status_bar_height"
                app:layout_constraintStart_toEndOf="@+id/screen_height_hint"
                app:layout_constraintTop_toTopOf="@+id/screen_height_hint"
                tools:text="2560 px" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status_bar_height_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/status_bar_height"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="@+id/screen_height_hint"
                app:layout_constraintTop_toBottomOf="@+id/screen_height" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status_bar_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/status_bar_height_hint"
                app:layout_constraintTop_toTopOf="@+id/status_bar_height_hint"
                tools:text="84 px" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navigation_bar_height_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/navigation_bar_height"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="@+id/status_bar_height_hint"
                app:layout_constraintTop_toBottomOf="@+id/status_bar_height" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navigation_bar_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/navigation_bar_height_hint"
                app:layout_constraintTop_toTopOf="@+id/navigation_bar_height_hint"
                tools:text="168 px" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dp_px_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/information_wrapper"
        app:layout_constraintStart_toStartOf="@+id/information_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/information_wrapper">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_px"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/px"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@+id/text_input_px"
                app:layout_constraintStart_toStartOf="@+id/text_input_px"
                app:layout_constraintTop_toBottomOf="@+id/text_input_px"
                tools:text="dp: 0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/text_input_px"
                app:layout_constraintStart_toStartOf="@+id/text_input_px"
                app:layout_constraintTop_toBottomOf="@+id/text_view_dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dp"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_px"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@+id/text_input_dp"
                app:layout_constraintStart_toStartOf="@+id/text_input_dp"
                app:layout_constraintTop_toBottomOf="@+id/text_input_dp"
                tools:text="px: 0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>